Some adjustments were made to the interface and the 'WEBUI' layer. In the 'DnInitializer' class, some adjustments were made to the initial database creation.

--- a/ALB.BLOG.WEBUI/Views/Shared/_Layout.cshtml
+++ b/ALB.BLOG.WEBUI/Views/Shared/_Layout.cshtml
@@ -39,8 +39,8 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link px-lg-2 py-2 py-lg-3 nav-a-alb" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li class="nav-item"><a class="nav-link px-lg-2 py-2 py-lg-3 nav-a-alb" asp-controller="Page" asp-action="About">About</a></li>
-                    <li class="nav-item"><a class="nav-link px-lg-2 py-2 py-lg-3 nav-a-alb" asp-controller="Page" asp-action="Contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-2 py-2 py-lg-3 nav-a-alb" asp-controller="Page" asp-action="About">Sobre</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-2 py-2 py-lg-3 nav-a-alb" asp-controller="Page" asp-action="Contact">Contato</a></li>
                     <li class="nav-item"><a class="nav-link px-lg-2 py-2 py-lg-3 nav-a-alb" target="_blank" href="@settingVM.GithubUrl"><i class="bi bi-github"></i></a></li>
                     <li class="nav-item"><a class="nav-link px-lg-2 py-2 py-lg-3 nav-a-alb" target="_blank" href="@settingVM.LinkedInUrl"><i class="bi bi-linkedin"></i></a></li>
                     <li class="nav-item"><a class="nav-link px-lg-2 py-2 py-lg-3 nav-a-alb" target="_blank" href="@settingVM.InstagramUrl"><i class="bi bi-instagram"></i></a></li>
